--- a/.github/workflows/ios-ci.yml
+++ b/.github/workflows/ios-ci.yml
@@ -13,7 +13,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Configurar Xcode
         run: |
-          xcodebuild -version 16.2
+          sudo xcode-select -s /Applications/Xcode_16.0.app/Contents/Developer
+          xcodebuild -version 16.0
       - name: Construir la aplicación
         run: |
           xcodebuild clean build  \
