--- a/.github/workflows/ios-ci.yml
+++ b/.github/workflows/ios-ci.yml
@@ -13,6 +13,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Configurar Xcode
         run: |
+          sudo xcode-select -s /Applications/Xcode_16.1.0.app/Contents/Developer
           xcodebuild -version 16.1
       - name: Construir la aplicación
         run: |
